tree-sitter-fearless/test/corpus/alias.txt
===========
Basic alias
===========

package test
alias base.F as F,

-----------

(source_file
  (package
    name: (packagePath))
  (alias
    from: (concreteType
      package: (packagePath)
      name: (typeName))
    to: (typeName)))

=============
Generic alias
=============

package test
alias base.LList[base.Str] as Path,

-------------

(source_file
  (package
    name: (packagePath))
  (alias
    from: (concreteType
      package: (packagePath)
      name: (typeName)
      generic: (concreteTypes
        (concreteType
          package: (packagePath)
          name: (typeName))))
    to: (typeName)))

======================
Multiple generic alias
======================

package test
alias CoolType[One, one.Two, one.two.Three] as Counter,

----------------------

(source_file
  (package
    name: (packagePath))
  (alias
    from: (concreteType
      name: (typeName)
      generic: (concreteTypes
        (concreteType
          name: (typeName))
        (concreteType
          package: (packagePath)
          name: (typeName))
        (concreteType
          package: (packagePath)
          name: (typeName))))
    to: (typeName)))

===================
Multi package alias
===================

package test
alias one.two.Tree as Tree,

-------------------

(source_file
  (package
    name: (packagePath))
  (alias
    from: (concreteType
      package: (packagePath)
      name: (typeName))
    to: (typeName)))

=================
"as" in type name
=================

package test
alias time.Was as Was,

-----------------

(source_file
  (package
    name: (packagePath))
  (alias
    from: (concreteType
      package: (packagePath)
      name: (typeName))
    to: (typeName)))

======================
Generic alias with mdf
======================

package test
alias base.LList[mut base.Str] as Path,

----------------------

(source_file
  (package
    name: (packagePath))
  (alias
    from: (concreteType
      package: (packagePath)
      name: (typeName)
      generic: (concreteTypes
        (concreteType
          mdf: (mdf)
          package: (packagePath)
          name: (typeName))))
    to: (typeName)))

======================
Bad mdf
:error
======================

package test
alias mut base.LList[base.Str] as Path,

----------------------
